src/objects/Apttus_Config2__FrequencyConversionRate__c.object
<CustomObject>
    <description>Represents the conversion rates used to convert pricing from one frequency to another</description>
    <fields>
        <fullName>Apttus_Config2__ConversionFactor__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The conversion factor to apply to convert one frequency to another</description>
        <label>Conversion Factor</label>
        <precision>18</precision>
        <required>true</required>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FromFrequency__c</fullName>
        <description>The frequency to convert from</description>
        <label>From Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ToFrequency__c</fullName>
        <description>The frequency to convert to</description>
        <label>To Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Frequency Conversion Rate</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__FromFrequency__c</columns>
        <columns>Apttus_Config2__ToFrequency__c</columns>
        <columns>Apttus_Config2__ConversionFactor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000000000}</displayFormat>
        <label>Conversion Rate Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Frequency Conversion Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>